--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "JavaScript validators",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Eror: no test specified\" && exit 1",
+    "lint-check": "npx eslint index.js ./src/**/*.js --fix-dry-run",
+    "lint": "npx eslint index.js ./src/**/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,9 @@
     "url": "https://github.com/pleets/js-validators/issues"
   },
   "homepage": "https://github.com/pleets/js-validators#readme",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "eslint-config-google": "^0.14.0"
+  }
 }
