feat: add webpack and switch to commonjs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "require-jsdoc": 0
+        "require-jsdoc": 0,
+        "max-len": ["error", { "code": 120 }]
     }
 }
