--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Eror: no test specified\" && exit 1",
-    "lint-check": "npx eslint index.js ./src/**/*.js --fix-dry-run",
-    "lint": "npx eslint index.js ./src/**/*.js --fix"
+    "lint-check": "npx eslint index.js ./src/**/*.js *.js --fix-dry-run",
+    "lint": "npx eslint index.js ./src/**/*.js *.js --fix",
+    "dev": "npx webpack --mode development",
+    "prod": "npx webpack --mode production",
+    "watch": "npx webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -21,9 +24,10 @@
     "url": "https://github.com/pleets/js-validators/issues"
   },
   "homepage": "https://github.com/pleets/js-validators#readme",
-  "type": "module",
   "devDependencies": {
     "eslint": "^8.11.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
